--- a/META.yml
+++ b/META.yml
@@ -20,6 +20,7 @@ requires:
   IO::Select: 0
   IO::Socket::Multicast: 0
   JSON::XS: 0
+  LWP::Protocol::https: 0
   LWP::UserAgent: 0
   Moo: 0
   base: 0
@@ -30,4 +31,4 @@ requires:
 resources:
   bugtracker: https://github.com/dwery/hue-perl/issues
   repository: git://github.com/dwery/hue-perl.git
-version: 0.4
+version: 0.5
